--- a/src/cover-letter.html
+++ b/src/cover-letter.html
@@ -32,6 +32,9 @@
               <p>Marchelo849@outlook.com</p>
             </li>
           </ul>
+          <button type="but" class="cover-btn-toresume">
+            <a class="cover-letter" href="./index1.html">to resume</a>
+          </button>
         </div>
         <img src="./images/foto1.jpg" alt="user photo" class="cover__photo" />
       </header>
@@ -39,9 +42,9 @@
       <!--main-->
 
       <main class="cover__main">
-        <button type="but" class="cover-btn-toresume">
-          <a class="cover-letter" href="./index.html">to resume</a>
-        </button>
+        <!-- <button type="but" class="cover-btn-toresume">
+          <a class="cover-letter" href="./index1.html">to resume</a>
+        </button> -->
 
         <!--main content-->
         <h3>Dear Hiring Manager,</h3>
