--- a/src/index1.html
+++ b/src/index1.html
@@ -321,10 +321,10 @@
                 </svg><a href="">Marchelo849@outlook.com</a></li>
                 <li><svg class="contacts__icon icon-linkedin" width="25" height="25">
                   <use href="./images/icons.svg/sprites.svg#icon-linkedin"></use>
-                </svg><a href="">LinkedIN</a></li>
+                </svg><a href="#">LinkedIN</a></li>
                 <li><svg class="contacts__icon" width="25" height="25">
                   <use href="./images/icons.svg/sprites.svg#icon-github"></use>
-                </svg><a href="">GitHub</a></li>
+                </svg><a href="#">GitHub</a></li>
                
             </ul>
         </div>
