--- a/src/index1.html
+++ b/src/index1.html
@@ -325,6 +325,9 @@
                 <li><svg class="contacts__icon" width="25" height="25">
                   <use href="./images/icons.svg/sprites.svg#icon-github"></use>
                 </svg><a href="#">GitHub</a></li>
+                <li><svg class="contacts__icon" width="25" height="25">
+                  <use href="./images/icons.svg/sprites.svg#icon-telegram"></use>
+                </svg><a href="#">Telegram</a></li>
                
             </ul>
         </div>
