--- a/src/cover-letter.html
+++ b/src/cover-letter.html
@@ -33,7 +33,7 @@
             </li>
           </ul>
           <button type="but" class="cover-btn-toresume">
-            <a class="cover-letter" href="./index1.html">to resume</a>
+            <a class="cover-letter" href="./index.html">to resume</a>
           </button>
         </div>
         <img src="./images/foto1.jpg" alt="user photo" class="cover__photo" />
