--- a/src/index.html
+++ b/src/index.html
@@ -366,8 +366,24 @@
                     <li class="soft-skills-item"> <span class="soft-skills-text">English — Intermediate</span></li>
                     
                 </ul>
+                
             </div>
-            <button  class="cover-letter-btn"><a class="cover-letter" href="./cover-letter.html">to cover letter</a></button>
+            <address class="address">
+              <ul class="address-list ">
+                <li>
+                  <a class="address-linck"
+                    href="https://goo.gl/maps/maQHvK9j9s51aTgQ8"
+                    target="_blank"
+                    rel="noreferrer noopener nofollow"
+                    title="Google Maps"
+                    >м. Київ, пр-т Лесі Українки, 26
+                  </a>
+                </li>
+                <li><a href="mailto:info@devstudio.com" class="address-linck">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="address-linck">+38 096 111 11 11</a></li>
+              </ul>
+            </address>
+            <!-- <button  class="cover-letter-btn"><a class="cover-letter" href="./cover-letter.html">to cover letter</a></button> -->
 
     </aside>
 </div>
