--- a/src/cover-letter.html
+++ b/src/cover-letter.html
@@ -32,9 +32,9 @@
               <p>Marchelo849@outlook.com</p>
             </li>
           </ul>
-          <button type="but" class="cover-btn-toresume">
+          <!-- <button type="but" class="cover-btn-toresume">
             <a class="cover-letter" href="./index.html">to resume</a>
-          </button>
+          </button> -->
         </div>
         <img src="./images/foto1.jpg" alt="user photo" class="cover__photo" />
       </header>
